supp controller closes #32